編集機能の追加

--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -6,6 +6,8 @@
     <tr>
         <td>{{item["id"]}}</td>
         <td>{{item["task"]}}</td>
+        <td><a href="/del/{{item['id']}}">削除</a></td>
+        <td><a href="/edit/{{item['id']}}">編集</a></td>
     </tr>
     {% endfor %}
 
